--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@astrojs/svelte": "^1.0.0",
     "astro": "^1.0.1",
-    "astro-fonts-next": "^1.0.4"
+    "astro-fonts-next": "^1.0.4",
+    "sass": "^1.54.4",
+    "svelte": "^3.49.0"
   },
   "dependencies": {
     "astro-google-fonts-optimizer": "^0.2.0",
