--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "svelte": "^3.49.0"
   },
   "dependencies": {
+    "@astrojs/netlify": "^1.0.1",
+    "@netlify/functions": "^1.1.0",
     "astro-google-fonts-optimizer": "^0.2.0",
     "astro-icon": "^0.7.3"
   }
