--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joshgermon.me",
+  "name": "@example/basics",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@astrojs/svelte": "^1.0.0",
-    "astro": "^1.0.1",
+    "astro": "^1.0.5",
     "astro-fonts-next": "^1.0.4",
     "sass": "^1.54.4",
     "svelte": "^3.49.0"
