--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "devDependencies": {
+    "@astrojs/netlify": "^1.0.1",
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/svelte": "^1.0.0",
     "astro": "^1.0.5",
